[tool.poetry]
authors = [
    'Ipregistry Team <support@ipregistry.co>',
    'Laurent Pellegrino <laurent.pellegrino@ipregistry.co>'
]
description = 'Official Python library for Ipregistry'
homepage = 'https://ipregistry.co'
keywords = [
    'ipinfo',
    'ipregistry',
    'ip-address',
    'ip-data',
    'ip-geolocation',
    'threat-detection',
    'user-agent-parsing'
]
name = 'ipregistry'
license = 'Apache-2.0'
readme = 'README.md'
repository = 'https://github.com/ipregistry/ipregistry-python'
version = '5.0.0'

[tool.poetry.dependencies]
cachetools = '^7.1.4'
pydantic = "^2.13.4"
python = '>=3.10'
requests = '^2.34.2'
httpx = {version = "^0.28.1", optional = true}

[tool.poetry.extras]
async = ["httpx"]

[tool.poetry.group.dev.dependencies]
pytest = '>=9.1.1'
requests-mock = "^1.12.1"
ruff = "^0.15.20"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
# The public API is intentionally re-exported with star imports.
ignore = ["F403", "F405"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
