[project]
name = 'ipregistry'
version = '5.0.0'
description = 'Official Python library for Ipregistry'
authors = [
    {name = 'Ipregistry Team', email = 'support@ipregistry.co'},
    {name = 'Laurent Pellegrino', email = 'laurent.pellegrino@ipregistry.co'}
]
license = 'Apache-2.0'
readme = 'README.md'
requires-python = '>=3.10'
keywords = [
    'ipinfo',
    'ipregistry',
    'ip-address',
    'ip-data',
    'ip-geolocation',
    'threat-detection',
    'user-agent-parsing'
]
dependencies = [
    'cachetools (>=7.1.4,<8.0.0)',
    'pydantic (>=2.13.4,<3.0.0)',
    'requests (>=2.34.2,<3.0.0)'
]

[project.optional-dependencies]
async = ['httpx (>=0.28.1,<0.29.0)']

[project.urls]
Homepage = 'https://ipregistry.co'
Repository = 'https://github.com/ipregistry/ipregistry-python'

[tool.poetry.group.dev.dependencies]
pytest = '>=9.1.1'
requests-mock = "^1.12.1"
ruff = "^0.15.20"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
# The public API is intentionally re-exported with star imports.
ignore = ["F403", "F405"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
