[project]
name = 'ipregistry'
version = '5.0.0'
description = 'Official Python library for Ipregistry'
authors = [
    {name = 'Ipregistry Team', email = 'support@ipregistry.co'},
    {name = 'Laurent Pellegrino', email = 'laurent.pellegrino@ipregistry.co'}
]
license = 'Apache-2.0'
license-files = ['LICENSE.txt']
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Internet',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Typing :: Typed'
]
keywords = [
    'ipinfo',
    'ipregistry',
    'ip-address',
    'ip-data',
    'ip-geolocation',
    'threat-detection',
    'user-agent-parsing'
]
dependencies = [
    'cachetools (>=7.1.4,<8.0.0)',
    'pydantic (>=2.13.4,<3.0.0)',
    'requests (>=2.34.2,<3.0.0)'
]

[project.optional-dependencies]
async = ['httpx (>=0.28.1,<0.29.0)']

[project.urls]
Homepage = 'https://ipregistry.co'
Repository = 'https://github.com/ipregistry/ipregistry-python'

[dependency-groups]
dev = [
    'pytest>=9.1.1',
    'requests-mock>=1.12.1,<2.0.0',
    'ruff>=0.15.20,<0.16.0'
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
# The public API is intentionally re-exported with star imports.
ignore = ["F403", "F405"]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
